--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,40 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.jiosecure">
-
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_SMS"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
-    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    package="com.example.redittclient">
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher_background"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeScreen"
-            android:label="@string/app_name"
-            android:theme="@style/MyThemeWithDarkActionBar">
-           <!-- <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+        <activity android:name=".SubReddit">
+
         </activity>
-        <activity android:name=".OtpScreen" />
-        <activity android:name=".LoginScreen" />
+        <activity
+            android:name=".MainScreen"
+            android:label="@string/title_activity_home_page"
+
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
         <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-               <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
     </application>
 
 </manifest>
+
+
+
+<!--
+android:launchMode=“singleTop”
+-->
